--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "vite build && vite-plugin-gh-pages"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.77.6"
