--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.77.6"
   },
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
