--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,9 +24,9 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@styles/*": ["src/styles/*"],
-      "@sections/*": ["src/sections/*"],
+      "@components/*": ["./src/components/*"],
+      "@styles/*": ["./src/styles/*"],
+      "@sections/*": ["./src/sections/*"],
     }
   },
   "include": ["src"]
